--- a/PROJEKAT/GUITs/MainWindow.xaml
+++ b/PROJEKAT/GUITs/MainWindow.xaml
@@ -7,34 +7,49 @@
         mc:Ignorable="d"
         Title="Mayhem" Height="720" Width="1280">
     <Grid Margin="15,15,15,15">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="0,90*"/>
             <RowDefinition Height="0,10*"/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="2" Background="BlueViolet" BorderBrush="Black" BorderThickness="5" HorizontalAlignment="Center" Width="500" FontSize="18" FontFamily="Sans" >Add Task</Button>
-        <Separator></Separator>
-        <Grid Grid.Row="0">
+        <Button Grid.Row="1" Background="BlueViolet" BorderBrush="Black" BorderThickness="5" HorizontalAlignment="Center" Width="500" FontSize="18" FontFamily="Sans" Click="Button_Click" Grid.Column="1">Add Task</Button>
+        <Separator Grid.ColumnSpan="2" Margin="0,2,0,2"></Separator>
+        <Grid Grid.Row="0" Grid.ColumnSpan="2" Margin="0,0,0,67" Grid.RowSpan="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="0.66*"></RowDefinition>
-                <RowDefinition Height="0.34*"></RowDefinition>
+                <RowDefinition Height="0.5*"></RowDefinition>
+                <RowDefinition Height="0.25*"></RowDefinition>
+                <RowDefinition Height="0.25*"></RowDefinition>
             </Grid.RowDefinitions>
 
             <Expander Grid.Row="1" Header="Waiting jobs" FontSize="18" FontFamily="Sans">
                 <ListView x:Name="WaitingJobs">
                     <ListView.View>
                         <GridView AllowsColumnReorder="False">
-                            <GridViewColumn Header="Job name" DisplayMemberBinding="{Binding id}"></GridViewColumn>
+                            <GridViewColumn Header="Job ID" DisplayMemberBinding="{Binding id}"></GridViewColumn>
                         </GridView>
                     </ListView.View>
                 </ListView>
             </Expander>
 
-            
+            <Expander Grid.Row="2" Header="Jobs not started" FontSize="18" FontFamily="Sans">
+                <ListView x:Name="NotStartedJobs">
+                    <ListView.View>
+                        <GridView AllowsColumnReorder="False">
+                            <GridViewColumn Header="Job ID" DisplayMemberBinding="{Binding id}"></GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Expander>
+
+
             <ListView Grid.Row="0" x:Name="RunningJobs">
                 <ListView.View>
                     <GridView AllowsColumnReorder="False">
-                        <GridViewColumn Header="Job name" DisplayMemberBinding="{Binding id}"></GridViewColumn>
+                        <GridViewColumn Header="Job ID" DisplayMemberBinding="{Binding id}"></GridViewColumn>
                         <GridViewColumn Header="Progress">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
@@ -65,9 +80,26 @@
                                                 </Style>
                                             </Button.Style>
                                         </Button>
-                                        <Button IsEnabled="{Binding IsPausableOrResumable}" Name="PauseButton" BorderThickness="0" Background="{x:Null}" Width="24" Height="24">
+                                        <Button Name="PauseButton" BorderThickness="0" Background="{x:Null}" Width="24" Height="24">
                                             <StackPanel>
                                                 <Image Source="Resources/pause32.png" Width="16" Height="16"></Image>
+                                            </StackPanel>
+                                            <Button.Style>
+                                                <Style TargetType="Button">
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsEnabled" Value="True">
+                                                            <Setter Property="Opacity" Value="1.0"></Setter>
+                                                        </Trigger>
+                                                        <Trigger Property="IsEnabled" Value="False">
+                                                            <Setter Property="Opacity" Value="0.5"></Setter>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+                                            </Button.Style>
+                                        </Button>
+                                        <Button Name="StopButton" BorderThickness="0" Background="{x:Null}" Width="24" Height="24">
+                                            <StackPanel>
+                                                <Image Source="Resources/stop32.png" Width="16" Height="16"></Image>
                                             </StackPanel>
                                             <Button.Style>
                                                 <Style TargetType="Button">
@@ -89,7 +121,7 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            
+
         </Grid>
 
 
