--- a/PROJEKAT/GUITs/SchedulerSpecWindow.xaml
+++ b/PROJEKAT/GUITs/SchedulerSpecWindow.xaml
@@ -21,12 +21,24 @@
                 <Separator></Separator>
                 <Separator></Separator>
 
-                <RadioButton x:Name="rb1" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">FIFO</RadioButton>
-                <RadioButton x:Name="rb2" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">RoundRobin</RadioButton>
-                <RadioButton x:Name="rb3" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (no preemption)</RadioButton>
-                <RadioButton x:Name="rb4" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (no preemption + extra slice)</RadioButton>
-                <RadioButton x:Name="rb5" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (preemption)</RadioButton>
-                <RadioButton x:Name="rb6" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (preemption + extra slice)</RadioButton>
+                <RadioButton Checked="rb1_Checked" x:Name="rb1" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">FIFO</RadioButton>
+                <RadioButton Unchecked="rb2_Unchecked" Checked="rb2_Checked" x:Name="rb2" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">RoundRobin</RadioButton>
+                <!--StackPanel Orientation="Horizontal">
+                    <RadioButton Checked="rb2_Checked" x:Name="rb2" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">RoundRobin</RadioButton>
+                    <TextBlock Margin ="5, 5, 5, 5" IsEnabled="False" x:Name="SliceTimeBlockRR" Text="Slice time: "></TextBlock>
+                    <TextBox Margin="5, 5, 5, 5" IsEnabled="False" x:Name="SliceTimeBoxRR" Width="50" Text="2" TextAlignment="Center"></TextBox>
+                </StackPanel-->
+                <RadioButton x:Name="rb3" Checked="rb3_Checked" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (no preemption)</RadioButton>
+                <RadioButton x:Name="rb4" Checked="rb4_Checked" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (no preemption + extra slice)</RadioButton>
+                <RadioButton x:Name="rb5" Checked="rb5_Checked" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (preemption)</RadioButton>
+                <RadioButton x:Name="rb6" Checked="rb6_Checked" FontSize="20" VerticalContentAlignment="Center" FontFamily="Arial">Priority (preemption + extra slice)</RadioButton>
+
+                <Separator Margin="0, 15, 0, 0"></Separator>
+
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock FontSize="20" Margin ="5, 5, 5, 5" IsEnabled="True" x:Name="SliceTimeBlockRR" Text="Slice time (in seconds): "></TextBlock>
+                    <TextBox FontSize="20" Margin="60, 5, 5, 5" IsEnabled="False" x:Name="SliceTimeBoxRR" Width="100" Text="2" TextAlignment="Center"></TextBox>
+                </StackPanel>
 
             </StackPanel>
         </Grid>
@@ -36,7 +48,7 @@
             <StackPanel Orientation="Horizontal">
                 <TextBlock FontSize="20">Number of concurrent tasks =  </TextBlock>
                 <Separator Margin="10, 0, 0, 0"></Separator>
-                <TextBox x:Name="parralelismBox" Width="100" Height="27" HorizontalAlignment="Center" VerticalAlignment="Top" Text="?" TextAlignment="Center"></TextBox>
+                <TextBox FontSize="20" x:Name="parralelismBox" Width="100" Height="27" HorizontalAlignment="Center" VerticalAlignment="Top" Text="?" TextAlignment="Center"></TextBox>
             </StackPanel>
             
         </Grid>
