--- a/PROJEKAT/GUITs/App.xaml
+++ b/PROJEKAT/GUITs/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:GUITs"
-             StartupUri="SchedulerSpecWindow.xaml">
+             StartupUri="SchedulerSpecWindow.xaml"
+             Exit="Application_Exit">
     <Application.Resources>
          
     </Application.Resources>
